Adding sitemap and change doctor name

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
 												<ul>
 													<li><a href="doctors/dr-vivek-chandra-saxena.html">Dr. Vivek Chandra
 															Saxena</a></li>
-													<li><a href="doctors/dr-anshu-saxena.html">Dr. Anshu Saxena</a></li>
+													<li><a href="doctors/dr-anshu-saxena.html">Dr. Ashu Saxena</a></li>
 													<li><a href="doctors/dr-pramod-kumar.html">Dr. Pramod Kumar</a></li>
 													<li><a href="doctors/dr-deepak-mishra.html">Dr. Deepak Mishra</a>
 													</li>
