--- a/doctors.html
+++ b/doctors.html
@@ -68,7 +68,7 @@
                                                 <ul>
                                                     <li><a href="doctors/dr-vivek-chandra-saxena.html">Dr. Vivek Chandra
                                                             Saxena</a></li>
-                                                    <li><a href="doctors/dr-anshu-saxena.html">Dr. Anshu Saxena</a></li>
+                                                    <li><a href="doctors/dr-anshu-saxena.html">Dr. Ashu Saxena</a></li>
                                                     <li><a href="doctors/dr-pramod-kumar.html">Dr. Pramod Kumar</a></li>
                                                     <li><a href="doctors/dr-deepak-mishra.html">Dr. Deepak Mishra</a>
                                                     </li>
@@ -182,13 +182,13 @@
                             </div>
                         </article>
 
-                        <!-- Dr. Anshu Saxena -->
+                        <!-- Dr. Ashu Saxena -->
                         <article class="pbmit-team-style-1 col-md-6 col-lg-4">
                             <div class="pbminfotech-post-item">
                                 <div class="pbmit-featured-wrap">
                                     <div class="pbmit-featured-img-wrapper">
                                         <div class="pbmit-featured-wrapper">
-                                            <img src="images/team/team-02.jpg" class="img-fluid" alt="Dr. Anshu Saxena">
+                                            <img src="images/team/team-02.jpg" class="img-fluid" alt="Dr. Ashu Saxena">
                                         </div>
                                     </div>
                                     <div class="pbmit-team-btn">
@@ -202,7 +202,7 @@
                                         <div class="pbminfotech-box-team-position">Senior Gynecologist & Obstetrician
                                         </div>
                                         <h3 class="pbmit-team-title">
-                                            <a href="doctors/dr-anshu-saxena.html">Dr. Anshu Saxena</a>
+                                            <a href="doctors/dr-anshu-saxena.html">Dr. Ashu Saxena</a>
                                         </h3>
                                     </div>
                                 </div>
