--- a/doctors/dr-anshu-saxena.html
+++ b/doctors/dr-anshu-saxena.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Dr. Anshu Saxena – Vardan Hospital</title>
+    <title>Dr. Ashu Saxena – Vardan Hospital</title>
     <meta name="robots" content="noindex, follow">
     <meta name="description"
-        content="Profile of Dr. Anshu Saxena, Senior Gynecologist & Obstetrician at Vardan Hospital.">
+        content="Profile of Dr. Ashu Saxena, Senior Gynecologist & Obstetrician at Vardan Hospital.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="../images/fevicon.png">
@@ -112,7 +112,7 @@
                         <div class="pbmit-tbar">
                             <div class="pbmit-tbar-inner container">
                                 <h3 class="pbmit-tbar-subtitle"> Senior Gynecologist</h3>
-                                <h1 class="pbmit-tbar-title"> Dr. Anshu Saxena</h1>
+                                <h1 class="pbmit-tbar-title"> Dr. Ashu Saxena</h1>
                             </div>
                         </div>
                         <div class="pbmit-breadcrumb">
@@ -121,8 +121,7 @@
                                 <span class="sep"><i class="pbmit-base-icon-angle-double-right"></i></span>
                                 <span><span class="post-root post post-post current-item"> Doctors</span></span>
                                 <span class="sep"><i class="pbmit-base-icon-angle-double-right"></i></span>
-                                <span><span class="post-root post post-post current-item"> Dr. Anshu
-                                        Saxena</span></span>
+                                <span><span class="post-root post post-post current-item">Dr. Ashu Saxena</span></span>
                             </div>
                         </div>
                     </div>
@@ -141,13 +140,13 @@
                                     <div class="pbmit-team-left-inner">
                                         <div class="pbmit-featured-wrapper">
                                             <img src="../images/team/team-02.jpg" class="img-fluid w-100"
-                                                alt="Dr. Anshu Saxena">
+                                                alt="Dr. Ashu Saxena">
                                         </div>
                                         <div class="pbmit-team-detail">
                                             <div class="pbmit-team-detail-inner">
                                                 <div class="pbmit-team-summary">
                                                     <h4 class="pbmit-team-designation">Senior Gynecologist</h4>
-                                                    <h2 class="pbmit-team-title">Dr. Anshu Saxena</h2>
+                                                    <h2 class="pbmit-team-title">Dr. Ashu Saxena</h2>
                                                 </div>
                                                 <ul class="pbmit-single-team-info">
                                                     <li><label>Phone :</label> +91 98370 29772</li>
@@ -164,7 +163,7 @@
                                     <div class="pbmit-heading animation-style2">
                                         <h3 class="pbmit-title mb-3">Professional Biography</h3>
                                     </div>
-                                    <p class="pbmit-firstletter">Dr. Anshu Saxena is a leading Gynecologist and
+                                    <p class="pbmit-firstletter">Dr. Ashu Saxena is a leading Gynecologist and
                                         Obstetrician at Vardan Hospital. With over two decades of dedicated service, she
                                         is renowned for her expertise in managing high-risk pregnancies and complex
                                         gynecological conditions.</p>
@@ -179,7 +178,7 @@
                                                 <h6>Specialty :</h6>
                                             </div>
                                             <div class="col-md-8">
-                                                <p>Gynecology & Obstetrics</p>
+                                                <p>Obstetrics & Gynecology</p>
                                             </div>
                                         </div>
                                     </div>
@@ -189,7 +188,7 @@
                                                 <h6>Qualification :</h6>
                                             </div>
                                             <div class="col-md-8">
-                                                <p>MBBS, MS (Gynecology)</p>
+                                                <p>MBBS, MD (Obstetrics & Gynecology)</p>
                                             </div>
                                         </div>
                                     </div>
