--- a/services/maternity-painless-delivery.html
+++ b/services/maternity-painless-delivery.html
@@ -7,7 +7,7 @@
     <title>Painless Delivery & Maternity – Vardan Hospital</title>
     <meta name="robots" content="noindex, follow">
     <meta name="description"
-        content="Expert painless delivery and maternity services at Vardan Hospital, under the care of Dr. Anshu Saxena.">
+        content="Expert painless delivery and maternity services at Vardan Hospital, under the care of Dr. Ashu Saxena.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="../images/fevicon.png">
@@ -149,7 +149,7 @@
                                         At Vardan Hospital, we understand that childbirth is a significant moment in a
                                         family's life. We specialize in providing painless delivery options to ensure a
                                         comfortable and positive birthing experience for mothers. Under the expert
-                                        guidance of Dr. Anshu Saxena, our maternity wing is equipped with modern
+                                        guidance of Dr. Ashu Saxena, our maternity wing is equipped with modern
                                         facilities to handle all types of deliveries and obstetric emergencies.
                                     </p>
                                     <p>We offer comprehensive maternity services including:</p>
@@ -203,12 +203,12 @@
                                     <div class="row">
                                         <div class="col-md-4">
                                             <img src="../images/team/team-02.jpg" class="img-fluid"
-                                                alt="Dr. Anshu Saxena">
+                                                alt="Dr. Ashu Saxena">
                                         </div>
                                         <div class="col-md-8">
-                                            <h4><a href="../doctors/dr-anshu-saxena.html">Dr. Anshu Saxena</a></h4>
+                                            <h4><a href="../doctors/dr-anshu-saxena.html">Dr. Ashu Saxena</a></h4>
                                             <p class="mb-1"><strong>Senior Gynecologist & Obstetrician</strong></p>
-                                            <p>With over 20 years of experience, Dr. Anshu Saxena is dedicated to
+                                            <p>With over 20 years of experience, Dr. Ashu Saxena is dedicated to
                                                 women's health. She specializes in handling complex pregnancy cases and
                                                 ensuring safe delivery for both mother and child.</p>
                                             <a href="../doctors/dr-anshu-saxena.html"
