--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Vardan Hospital & Maternity Center - Bareilly</title>
 	<meta name="robots" content="index, follow">
 	<meta name="description"
-		content="Vardan Hospital & Maternity Center in Bareilly offers painless delivery, general surgery, pediatric care, and 24/7 emergency services. Expert doctors including Dr. Vivek Chandra Saxena and Dr. Anshu Saxena.">
+		content="Vardan Hospital & Maternity Center in Bareilly offers painless delivery, general surgery, pediatric care, and 24/7 emergency services. Expert doctors including Dr. Vivek Chandra Saxena and Dr. Ashu Saxena.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/fevicon.png">
@@ -94,7 +94,7 @@
 												<ul>
 													<li><a href="doctors/dr-vivek-chandra-saxena.html">Dr. Vivek Chandra
 															Saxena</a></li>
-													<li><a href="doctors/dr-anshu-saxena.html">Dr. Anshu Saxena</a></li>
+													<li><a href="doctors/dr-anshu-saxena.html">Dr. Ashu Saxena</a></li>
 													<li><a href="doctors/dr-pramod-kumar.html">Dr. Pramod Kumar</a></li>
 													<li><a href="doctors/dr-deepak-mishra.html">Dr. Deepak Mishra</a>
 													</li>
@@ -896,7 +896,7 @@
 													<a href="doctors/dr-anshu-saxena.html" rel="tag">Gynecologist</a>
 												</div>
 												<h3 class="pbmit-portfolio-title">
-													<a href="doctors/dr-anshu-saxena.html">Dr. Anshu Saxena</a>
+													<a href="doctors/dr-anshu-saxena.html">Dr. Ashu Saxena</a>
 												</h3>
 											</div>
 										</div>
