--- a/doctors.html
+++ b/doctors.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Meet the expert team of doctors at Vardan Hospital & Maternity Center.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/fevicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo.svg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
