--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		content="Vardan Hospital & Maternity Center in Bareilly offers painless delivery, general surgery, pediatric care, and 24/7 emergency services. Expert doctors including Dr. Vivek Chandra Saxena and Dr. Ashu Saxena.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="images/fevicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="images/logo.svg">
 	<!-- CSS
 			============================================ -->
 	<!-- Bootstrap CSS -->
