--- a/services/diagnostics-pathology.html
+++ b/services/diagnostics-pathology.html
@@ -10,7 +10,7 @@
         content="Accurate Diagnostics, Pathology, and Radiology services at Vardan Hospital. Ultrasound, X-Ray, and Lab facilities available 24/7.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../images/fevicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/logo.svg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
