--- a/services/maternity-painless-delivery.html
+++ b/services/maternity-painless-delivery.html
@@ -10,7 +10,7 @@
         content="Expert painless delivery and maternity services at Vardan Hospital, under the care of Dr. Ashu Saxena.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../images/fevicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/logo.svg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
