--- a/doctors/dr-vivek-chandra-saxena.html
+++ b/doctors/dr-vivek-chandra-saxena.html
@@ -10,7 +10,7 @@
         content="Profile of Dr. Vivek Chandra Saxena, General & Laparoscopic Surgeon at Vardan Hospital.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../images/fevicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/logo.svg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
