--- a/services/general-laparoscopic-surgery.html
+++ b/services/general-laparoscopic-surgery.html
@@ -10,7 +10,7 @@
         content="Advanced General and Laparoscopic Surgery at Vardan Hospital with Dr. Vivek Chandra Saxena. Minimally invasive procedures for faster recovery.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../images/fevicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/logo.svg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
